--- a/apps/web/public/home.html
+++ b/apps/web/public/home.html
@@ -93,7 +93,7 @@ html {
                   </p>
                 </div>
               </div>
-              <div class="agenda-img-wrapper"><img src="images/agenda-hero-img_1.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 87vw, (max-width: 991px) 81vw, 42vw" srcset="images/agenda-hero-img_1agenda-hero-img.webp 500w, images/agenda-hero-img_1agenda-hero-img.webp 800w, images/agenda-hero-img_1agenda-hero-img.webp 1080w, images/agenda-hero-img_1.webp 1240w" alt="" class="image-13"></div>
+              <div class="agenda-img-wrapper"><img src="images/agenda-hero-img_1.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 87vw, (max-width: 991px) 81vw, 42vw" alt="" class="image-13"></div>
             </div>
           </div>
         </div>
