Fix and add test and eslint rule

--- a/packages/embeds/embed-core/index.html
+++ b/packages/embeds/embed-core/index.html
@@ -417,6 +417,10 @@
       <h3><a href="?only=ns:columnView">Test Column View</a></h3>
       <div class="place" style="width: 100%"></div>
     </div>
+    <div class="inline-embed-container" id="cal-booking-place-autoScrollTest">
+      <h3><a href="?only=ns:autoScrollTest">Test Auto Scroll</a></h3>
+      <div class="place" style="width: 100%"></div>
+    </div>
     <script type="module" src="./playground.ts"></script>
   </body>
 </html>
